# HRHR

./: .gitignore  HRHR.code-workspace  LICENSE  PACKAGE_ADVICE.md  README.md  package-list.txt  setup.cfg
Old/: Mathematical_approximations.py  functions_old.py
Old/Oldrun/: Optimal_HRHR.py  Optimal_HRHR_asexual.py
notebooks/: 001_param_scan_analysis.ipynb  002_failed_run_time_course.ipynb  003_failed_run_time_course_ESFY.ipynb  004_failed_runs.ipynb  004_failed_runs_confirmed.ipynb  005_alternation_scan.ipynb  006_dose_space_fig.ipynb  007_dose_space_4.ipynb  008_sr_scan_params.ipynb  009_rough_for_Nik.ipynb  010_linkage_eq_sim.ipynb  Untitled.ipynb
src/: CHANGELOG.txt  HRHR_run_efficiently.py  Optimal_HRHR.py  PACKAGE_ADVICE.md  README.md  TODO.md  cluster_advice.md  figures.md  package-list.txt  paper_plan.md  plan.md  setup.py
src/Old/: Calculate_old_HRHR.py  plotter_old.py
src/alt_scan/: alt_scan.submit  alt_scan_rand.submit  analyse.py  check_failed.py  combine_rand.py  failed_run_alt_12_11_1e-10_1e-05_1_1_10_9.6.csv  failed_run_alt_12_21_1e-10_1e-05_1_1_10_9.6.csv  old_output_3_6.csv  old_output_5_11.csv  output_5_11_False_alt_12.csv  output_5_11_False_alt_21.csv  output_5_11_True_alt_12.csv  output_5_11_True_alt_21.csv  scan.py  scan_rand.py  utils.py
src/alternation_scan/: combine.py  scan.py  scan.submit  utils.py
src/appendix/: sr.py
src/create_figs/: changing_doses.py  changing_fcide.py  delta_curve.py  dose_response.py  dose_space.py  dose_space_4.py  grid.py  (+7 more)
tex/: equal_selection.tex
writing/: Param Scan Update.docx  Parameter scan.docx
(+146 files in other folders)
